# cad3

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: CELL_DESIGN.md
src/: cell.rs  error.rs  hash.rs  lib.rs  sink.rs  tag.rs  vlq.rs
src/types/: blob.rs  mod.rs  string.rs
tests/: encoding.rs  invariants.rs
tests/common/: mod.rs
